# Exobrain

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/: writing-substack
.claude/skills/adding-cheatsheets/: SKILL.md
.claude/skills/adding-cheatsheets/scripts/: add_cheatsheet.py
.claude/skills/analyze-architecture/: SKILL.md
.claude/skills/committing-work/: SKILL.md
.claude/skills/creating-ascii-drawings/: SKILL.md
.claude/skills/download-url/: SKILL.md
.claude/skills/download-url/scripts/: combine_pdfs.py
.claude/skills/editing-relational-context/: SKILL.md
.claude/skills/excalidraw/: SKILL.md
.claude/skills/excalidraw/references/: examples.md  json-format.md
.claude/skills/fetching-notion-content/: SKILL.md
.claude/skills/fetching-youtube-transcripts/: SKILL.md
.claude/skills/fetching-youtube-transcripts/scripts/: fetch_transcript.py
.claude/skills/getting-file-view-links/: SKILL.md
.claude/skills/hypercontext/: SKILL.md
.claude/skills/importing-conversations/: SKILL.md  test_import.py
.claude/skills/learning/: SKILL.md
.claude/skills/managing-cheatsheets/: SKILL.md
.claude/skills/saving-drawings/: SKILL.md
.claude/skills/saving-motivations/: SKILL.md
.claude/skills/skill-creator/: README.md  SKILL.md  skills-catalog.json
.claude/skills/skill-creator/references/: best-practices.md  (+5 more)
.claude/skills/waking-up/: SKILL.md
.claude/skills/wrapping-up/: SKILL.md
.claude/skills/writing-adding-footnotes/: SKILL.md
.claude/skills/writing-drafting-article/: SKILL.md
.claude/skills/youtube-fetching-transcripts/: SKILL.md
cheatsheets/: README.md  exo-frontier-ai.html  index.html
config/: user.md
crates/minmind-cli/: Cargo.toml
crates/minmind-core/src/: error.rs
crates/minmind-store/migrations/: 002_articles.sql  003_user_actions.sql
crates/minmind-store/src/: lib.rs  migrations.rs  sqlite.rs
examples/: relational-context.example.md
examples/memories/: README.md  carried-forward.md
examples/memories/claude/: emotional-grounding.md
examples/memories/insights/: working-together.md
learnings/: README.md  article-ingestion.md
plans/: 001-foundation.md
prompt-templates/: skill-request.md
public/: skills-browser.html
public/cheatsheets/: agi-radar-chart.html
python/: README.md  analyze_conversation_schema.py  split_conversations.py  split_conversations_v2.py
python/minmind/: __init__.py
python/minmind/articles/: extractor.py  summarizer.py
python/minmind/geniuses/: __init__.py  anthropic.py  base.py
recipes/: README-BACKEND.md  README.md  index.html  server.py
recipes/scripts/: setup_notion.py
shared/: README.md
shared/recipes/: README-BACKEND.md  README.md  index.html  server.py
shared/recipes/2026-02/: curried-red-lentil-soup-recipe.md  curried-red-lentil-soup-recipe_metadata.json  easy-lentil-soup-recipe.md  easy-lentil-soup-recipe_metadata.json  everyday-dal-recipe.md  everyday-dal-recipe_metadata.json  lentil-soup-recipe-love-and-lemons.md  lentil-soup-recipe-love-and-lemons_metadata.json  red-lentil-soup-recipe-with-video.md  red-lentil-soup-recipe-with-video_metadata.json
shared/recipes/scripts/: setup_notion.py
src/crates/minmind-core/: Cargo.toml
src/crates/minmind-store/: Cargo.toml
src/crates/minmind-store/migrations/: 001_initial_schema.sql
src/crates/minmind-store/src/: error.rs
src/python/: import_conversations.py  pyproject.toml
src/python/minmind/: cli.py
src/python/minmind/articles/: __init__.py
src/python/minmind/geniuses/: openai.py
(+14 files in other folders)
