[workspace]
resolver = "2"

members = [
    "crates/minmind-core",
    "crates/minmind-store",
    "crates/minmind-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Min"]
license = "MIT"
repository = "https://github.com/min/minmind"

[workspace.dependencies]
# Core
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async
tokio = { version = "1.42", features = ["full"] }

# Utilities
anyhow = "1.0"
dirs = "5.0"

# Internal crates
minmind-core = { path = "crates/minmind-core" }
minmind-store = { path = "crates/minmind-store" }
