[package]
name = "minmind-store"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
minmind-core.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
